--- a/.github/workflows/SmallAmpCI.yml
+++ b/.github/workflows/SmallAmpCI.yml
@@ -5,18 +5,55 @@ env:
   project_baseline: SmallBank
   project_directory: src
   iteration: 3
-  maxInputs: 10
   mode: dspotFast
 
 on:
   workflow_dispatch:
-        
+    inputs:
+      testClasses:
+        description: 'TestClasses to amplify (comma separated) empty-> all'
+        required: false
+        default: ''
+      parallel_jobs:         
+        description: 'Max number of all parallel jobs'
+        required: true
+        default: '8'
+      maxInputs:
+        description: 'Number of test variant per original test'
+        required: true
+        default: '10'
+      timeBudget:
+        description: 'Number of minutes as time budget (empty means no limit)'
+        required: false
+        default: ''        
 jobs:
-  TestAmplification:
+  MatrixBuild:
+    runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.result }}
+    steps:
+      - id: set-matrix
+        uses: actions/github-script@v4
+        env:
+          testClasses: ${{ github.event.inputs.testClasses }}
+          parallel_jobs: ${{ github.event.inputs.parallel_jobs }}
+        with:
+          script: |
+            l = parseInt(process.env.parallel_jobs)
+            if(process.env.testClasses){
+              if (process.env.testClasses.split(',').length < l )
+                l = process.env.testClasses.split(',').length
+            }
+            a = Array.from({length: l}, (x, i) => {a:i});
+            var o = {jobs: a};
+            return o
+          
+  TestAmplification: 
+    needs: MatrixBuild
     runs-on: ubuntu-latest
     strategy:
-      matrix:
-        portion: [1 , 2] # Change me if you like. The content of array is not important, just the length
+      matrix: ${{fromJSON(needs.MatrixBuild.outputs.matrix)}}
+#        portion: [1 , 2, 3, 4, 5, 6, 7, 8] # Change me if you like to run in parallel. The content of array is not important, just the length
     name: Job number ${{ strategy.job-index }}
     steps:
       - uses: actions/checkout@v2
@@ -32,8 +69,11 @@ jobs:
           SMALLAMP_PORTION: ${{ strategy.job-index }} 
           SMALLAMP_ALLJOBS: ${{ strategy.job-total }}
           SMALLAMP_iteration: ${{ env.iteration }}
-          SMALLAMP_maxInputs: ${{ env.maxInputs }}
+          SMALLAMP_maxInputs: ${{ github.event.inputs.maxInputs }}
           SMALLAMP_mode: ${{ env.mode }}  
+          SMALLAMP_timeBudget: ${{ github.event.inputs.timeBudget }}
+          SMALLAMP_testClasses: ${{ github.event.inputs.testClasses }}
+
   TestAmplificationPush:
     runs-on: ubuntu-latest
     needs: TestAmplification
