--- a/.github/workflows/SmallAmpCI.yml
+++ b/.github/workflows/SmallAmpCI.yml
@@ -23,9 +23,9 @@ on:
         required: true
         default: '10'
       timeBudget:
-        description: 'Number of minutes as time budget (empty means no limit)'
-        required: false
-        default: ''        
+        description: 'Number of minutes as time budget (0 means no limit)'
+        required: true
+        default: '0'        
 jobs:
   MatrixBuild:
     runs-on: ubuntu-latest
