--- a/.github/workflows/mutalkCI.yml
+++ b/.github/workflows/mutalkCI.yml
@@ -101,7 +101,7 @@ jobs:
         shell: bash
         timeout-minutes: 15
 
-      - run: ${{env.SMALLTALK_CI_VM}} ${{env.SMALLTALK_CI_IMAGE}} metacello install "github://$GITHUB_REPOSITORY/$CI_directory" BaselineOf${{env.CI_baseline}}
+      - run: ${{env.SMALLTALK_CI_VM}} ${{env.SMALLTALK_CI_IMAGE}} metacello install "tonel://$GITHUB_WORKSPACE/$CI_directory" BaselineOf${{env.CI_baseline}}
         shell: bash
         
       - run: ${{env.SMALLTALK_CI_VM}} ${{env.SMALLTALK_CI_IMAGE}} metacello install "github://mabdi/mutalk/src" BaselineOfMuTalk
