--- a/.github/workflows/mutalkCI.yml
+++ b/.github/workflows/mutalkCI.yml
@@ -28,6 +28,8 @@ jobs:
     if: github.event_name != 'workflow_dispatch'
     steps:
       - uses: actions/checkout@v2
+        with:
+           fetch-depth: 0
 
       - uses: hpi-swa/setup-smalltalkCI@v1
         id: smalltalkci
@@ -69,6 +71,8 @@ jobs:
     if: github.event_name == 'workflow_dispatch'
     steps:
       - uses: actions/checkout@v2
+        with:
+           fetch-depth: 0
 
       - uses: hpi-swa/setup-smalltalkCI@v1
         id: smalltalkci
