--- a/.github/workflows/mutalkCI.yml
+++ b/.github/workflows/mutalkCI.yml
@@ -56,6 +56,8 @@ jobs:
         with:
           script: |
             const fs = require('fs')
+            import fetch from "node-fetch";
+
             const data = fs.readFileSync(process.env.SMALLTALK_CI_BUILD_BASE + '/__mutalk_export.json', 'utf8')
             const url = 'https://mutation-testing-coverage.herokuapp.com/api/v1/jobs/'
             fetch(url, {
@@ -108,6 +110,8 @@ jobs:
         with:
           script: |
             const fs = require('fs')
+            import fetch from "node-fetch";
+
             const data = fs.readFileSync(process.env.SMALLTALK_CI_BUILD_BASE + '/__mutalk_export.json', 'utf8')
             const url = 'https://mutation-testing-coverage.herokuapp.com/api/v1/jobs/'
             fetch(url, {
