--- a/.github/workflows/mutalkCI.yml
+++ b/.github/workflows/mutalkCI.yml
@@ -50,23 +50,41 @@ jobs:
         with:
           name: mutation-testing-output
           path: ${{env.SMALLTALK_CI_BUILD_BASE}}/__mutalk_export.json
-
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 14
+      - run: npm ci
+      # or one-off:
+      - run: npm install request
       - id: pushjson
         uses: actions/github-script@v4
         with:
           script: |
             const fs = require('fs')
-            import fetch from "node-fetch";
+            import request, { Response } from 'request';
 
             const data = fs.readFileSync(process.env.SMALLTALK_CI_BUILD_BASE + '/__mutalk_export.json', 'utf8')
             const url = 'https://mutation-testing-coverage.herokuapp.com/api/v1/jobs/'
-            fetch(url, {
-                method: 'POST', 
-                headers: {
-                  'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(data)
-              });
+            request.post({
+                url: url,
+                body: data,
+                json: true
+              }, (error , _response , data) => {
+                  if (error) {
+                    throw new Error(error);
+                  }
+                  try {
+                    if (data.done) {
+                      core.setOutput('coveralls-api-result', JSON.stringify(data));
+                    } else {
+                      throw new Error(JSON.stringify(data));
+                    }
+                  } catch(err) {
+                    throw new Error('Parallel webhook error:' + err + ', ' + JSON.stringify(data));
+                  }
+                }
+              )
+            
          
   manual:
     runs-on: ubuntu-latest
@@ -105,19 +123,37 @@ jobs:
           name: mutation-testing-output
           path: ${{env.SMALLTALK_CI_BUILD_BASE}}/__mutalk_export.json
 
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 14
+      - run: npm ci
+      # or one-off:
+      - run: npm install request
       - id: pushjson
         uses: actions/github-script@v4
         with:
           script: |
             const fs = require('fs')
-            import fetch from "node-fetch";
+            import request, { Response } from 'request';
 
             const data = fs.readFileSync(process.env.SMALLTALK_CI_BUILD_BASE + '/__mutalk_export.json', 'utf8')
             const url = 'https://mutation-testing-coverage.herokuapp.com/api/v1/jobs/'
-            fetch(url, {
-                method: 'POST', 
-                headers: {
-                  'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(data)
-              });
+            request.post({
+                url: url,
+                body: data,
+                json: true
+              }, (error , _response , data) => {
+                  if (error) {
+                    throw new Error(error);
+                  }
+                  try {
+                    if (data.done) {
+                      core.setOutput('coveralls-api-result', JSON.stringify(data));
+                    } else {
+                      throw new Error(JSON.stringify(data));
+                    }
+                  } catch(err) {
+                    throw new Error('Parallel webhook error:' + err + ', ' + JSON.stringify(data));
+                  }
+                }
+              )
