--- a/.github/workflows/mutalkCI.yml
+++ b/.github/workflows/mutalkCI.yml
@@ -135,7 +135,7 @@ jobs:
             const fs = require('fs')
             const request = require('request')
 
-            const data = fs.readFileSync(process.env.SMALLTALK_CI_BUILD_BASE + '/__mutalk_export.json', 'utf8')
+            const data = JSON.parse(fs.readFileSync(process.env.SMALLTALK_CI_BUILD_BASE + '/__mutalk_export.json', 'utf8'))
             const url = 'https://mutation-testing-coverage.herokuapp.com/api/v1/jobs/'
             request.post({
                 url: url,
