--- a/.github/workflows/mutalkCI.yml
+++ b/.github/workflows/mutalkCI.yml
@@ -137,6 +137,8 @@ jobs:
 
             const data = JSON.parse(fs.readFileSync(process.env.SMALLTALK_CI_BUILD_BASE + '/__mutalk_export.json', 'utf8'))
             const url = 'https://mutation-testing-coverage.herokuapp.com/api/v1/jobs/'
+            var myHeaders = new Headers();
+            myHeaders.append('x-api-key', {{ secrets.MUTALKCI_API_KEY }});
             request.post({
                 url: url,
                 body: data,
