--- a/.github/workflows/mutalkCI.yml
+++ b/.github/workflows/mutalkCI.yml
@@ -142,7 +142,7 @@ jobs:
             request.post({
                 url: url,
                 headers: {
-                    'x-api-key': process.env.MUTALKCI_API_KEY
+                    'x-api-key': '85351620962c5f9b923073b1fd8a0053cd2b6e75d8eb195c5e5ee42526edd9ec'
                   },
                 body: data,
                 json: true
