--- a/.github/workflows/SmallAmpCI.yml
+++ b/.github/workflows/SmallAmpCI.yml
@@ -17,7 +17,7 @@ on:
       testClasses:
         description: 'TestClasses to amplify (comma separated) empty-> all'
         required: false
-        default: ''
+        default: 'SmallBankTest'
       mode:
         description: 'mode (dspot, dspotFast, dspotFastRank)'
         required: true
@@ -25,7 +25,7 @@ on:
       parallel_jobs:         
         description: 'Max number of all parallel jobs (0 use Input testClasses length)'
         required: true
-        default: '2'
+        default: '1'
       maxInputs:
         description: 'Number of test variant per original test'
         required: true
