--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
       testClasses:
         description: 'TestClasses to amplify (comma separated) empty-> all'
         required: false
-        default: ''
+        default: 'SmalllBank'
       parallel_jobs:         
         description: 'Max number of all parallel jobs (0 use Input testClasses length)'
         required: true
@@ -18,7 +18,7 @@ jobs:
     with:
       testClasses: ${{github.event.inputs.testClasses }}
       parallel_jobs: ${{github.event.inputs.parallel_jobs}}
-      input_project_baseline: 'SmallBank'
-      input_project_directory: 'src'
+      input_project_baseline: SmallBank
+      input_project_directory: src
     secrets:
       secret_github_token: ${{secrets.GITHUB_TOKEN}}
