Update and rename main.yml to SmallAmpCI2.yml

--- a/.github/workflows/SmallAmpCI2.yml
+++ b/.github/workflows/SmallAmpCI2.yml
@@ -6,7 +6,7 @@ on:
       testClasses:
         description: 'TestClasses to amplify (comma separated) empty-> all'
         required: false
-        default: 'SmalllBank'
+        default: 'SmalllBankTest'
       parallel_jobs:         
         description: 'Max number of all parallel jobs (0 use Input testClasses length)'
         required: true
