--- a/.github/workflows/SmallAmpCI.yml
+++ b/.github/workflows/SmallAmpCI.yml
@@ -9,7 +9,8 @@ env:
   SMALLAMP_MaxCrash: 10
   # check image freeze each 4*60 sec: a normal test method has a 3 minute time out
   SMALLAMP_freezeTimeOut: 120 
-  SmallAmp_ShredSeed: ${{ github.run_id}}  
+  SmallAmp_ShredSeed: ${{ github.run_id}}
+  SMALLAMP_DashboardJson: 1
   
 on:
   workflow_dispatch:
