--- a/.github/workflows/SmallAmpCI2.yml
+++ b/.github/workflows/SmallAmpCI2.yml
@@ -21,5 +21,6 @@ jobs:
       input_project_baseline: SmallBank
       input_project_directory: src
       SMALLAMP_DashboardJson: CREATE
+      new_branch_prefix: SmallAmpCI2
     secrets:
       secret_github_token: ${{secrets.GITHUB_TOKEN}}
