Fix response error condition
returned response will always be {status: String}
response HTTP code 200
In case of error: {status: String}
response HTTP code 400

--- a/.github/workflows/mutalkCI.yml
+++ b/.github/workflows/mutalkCI.yml
@@ -151,7 +151,7 @@ jobs:
                     throw new Error(error);
                   }
                   try {
-                    if (data.done) {
+                    if (data.status === "OK") {
                       core.setOutput('coveralls-api-result', JSON.stringify(data));
                     } else {
                       throw new Error(JSON.stringify(data));
