--- a/.github/workflows/custom-result.yml
+++ b/.github/workflows/custom-result.yml
@@ -6,6 +6,12 @@ name: StatusCheckCI
 on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+    inputs:
+      stats:         
+        description: 'the stat'
+        required: true
+        type: string        
+        default: 'success'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -33,6 +39,6 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           name: Code Coverage
-          conclusion: ${{ job.status }}
+          conclusion: ${{ github.event.inputs.stats }}
           output: "{\"summary\":\"Code Coverage\"}"
           output_text_description_file: Summary.md
